--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,9 +1,10 @@
+add payment to events
+
 == NOTES TO LATER ==
 cannot cancel a guest booking order
 the system has to clean out orders that is not processed
 the booking should never be expired, but only one can have status code 2, just in case of cash payment
 get booking plan by right credentials (non repeat, ends on)
-fix quick search, has to find also inactive members
 seems to miss the ajax loader image
 and need the css ui-lighten stuff
 save info on who has changed a order_staus_history
