--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,7 @@
 create new order when subscription should be recreated
 remake oneventattend event, add attend object instead
+wrong password page ugly
+check shipping price on cart
 
 == NOTES TO LATER ==
 create unique index (message_users, message_events, message_groups)
