--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,7 +1,9 @@
+member number has to be more visible on dashboard
 create new order when subscription should be recreated
 remake oneventattend event, add attend object instead
 wrong password page ugly
 check shipping price on cart
+attend event without beeing logged in
 
 == NOTES TO LATER ==
 create unique index (message_users, message_events, message_groups)
