Made member number visible on dashboard.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,4 @@
-member number has to be more visible on dashboard
+fix remake script
 create new order when subscription should be recreated
 remake oneventattend event, add attend object instead
 wrong password page ugly
