--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,4 @@
+some mails has to be sent immidiately
 create new order when subscription should be recreated
 check shipping price on cart
 attend event without beeing logged in
