--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,9 +1,8 @@
 create new order when subscription should be recreated
-attend event without beeing logged in
-on quick search, check grazvidaz, get user does not exists
 
 == NOTES TO LATER ==
 create unique index (message_users, message_events, message_groups)
+create validator for unique constraint attend ( user, event )
 cannot cancel a guest booking order
 the system has to clean out orders that is not processed
 the booking should never be expired, but only one can have status code 2, just in case of cash payment
@@ -14,7 +13,6 @@ save info on who has changed a order_staus_history
 stuff should not break if economic account number does not exists
 the system has to clean out orders that is not processed
 the booking should never be expired, but only one can have status code 2, just in case of cash payment
-create unique key on event attends
 add notes to some documentation on lockout
 give warning if you try to make a booking plan above a booking
 make sure we somehow can create teams, that show up on booking screen, which users can participate in (max 4 players)
