--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 create new order when subscription should be recreated
 add confirm payment terms on checkout
 make more dynamic product types without delivery
+make qr codes for events
 
 == NOTES TO LATER ==
 make product attribute page more dynamic
