--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,7 +1,9 @@
+make it possible to attend teams on booking view, and see other subscribed to team
 create new order when subscription should be recreated
 add confirm payment terms on checkout
 make more dynamic product types without delivery
 make qr codes for events
+check wordpress for installer
 
 == NOTES TO LATER ==
 make product attribute page more dynamic
