Added twitter integration.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,3 +20,4 @@
     * Added products to API
     * Added support for products in stock
     * No more need to clear cache on new configuration
+    * Added twitter integration to share posts
