Removed notice from generate schedule.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,7 @@
+show all configuration items on a page
+add creditcard subscription
+check ATK, seems like deleted areas still exists in field administration
+update field administration does not work
 create new order when subscription should be recreated
 add confirm payment terms on checkout
 make more dynamic product types without delivery
