--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 make a binding between currency and location, so we cannot delete current used curreny
+add support for webcam access from browser, to upload profile images
 show all configuration items on a page
 add creditcard subscription
 check ATK, seems like deleted areas still exists in field administration
