Added try catch on delete products.

--- a/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
+++ b/src/Club/LayoutBundle/Resources/translations/messages.da.xliff
@@ -2800,6 +2800,10 @@
           <source>You are already subscribed</source>
           <target>Du er allerede tilmeldt</target>
       </trans-unit>
+      <trans-unit id="740">
+          <source>Operation did not finish, an error occur.</source>
+          <target>Der opstod en fejl, operationen blev ikke udført.</target>
+      </trans-unit>
 
     </body>
   </file>
