You can see how has bought a product.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -21,3 +21,4 @@
     * Added support for products in stock
     * No more need to clear cache on new configuration
     * Added twitter integration to share posts
+    * Added features, you can see how has bought a product
