--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,6 @@
+there is a problem when buying guestbooking and continue to shop, location id will not match
 trash products
 add paginator in products view, now you can only view latest 10 products
-niels tried to add a produkt to basket, but got a message about no such product
 make a binding between currency and location, so we cannot delete current used curreny
 add support for webcam access from browser, to upload profile images
 show all configuration items on a page
