--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,4 @@
+when user has been deleted, you should no be able to see the user in ajax search, or see the users page
 there is a problem when buying guestbooking and continue to shop, location id will not match
 make a binding between currency and location, so we cannot delete current used curreny
 add support for webcam access from browser, to upload profile images
