--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,4 @@
+Event/Helper, eventexception does not exists
 auto submit form to quickpay
 improve location for cart button
 when user has been deleted, you should no be able to see the user in ajax search, or see the users page
