--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,5 @@
+Event/Helper, eventexception does not exists
+auto submit form to quickpay
 impersonate a user through the website, if you have the access
 auto submit form to quickpay
 improve location for cart button
