--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,4 @@
+build a map so admin can see where in the area the members is coming from
 make a binding between currency and location, so we cannot delete current used curreny
 Event/Helper, eventexception does not exists
 auto submit form to quickpay
