--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
-1.3.2
+1.3.3
+    * Show more products on each page
+    * Added booking errors to general log, debug to admins
+    * Does not count orders cancelled as a bought product
+    * Removed has_subscription entity in user filter
+    * Fixed bug, take quantity from product after purchase not after order has been planted
+
+1.3.2 (2014-03-14)
     * Upgraded to symfony 1.3.1
     * Removed JQuery and Bootstrap and depend on CDN
     * Added paginator to shop
