--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.3.4
+    * Fixed, dont show cancelled orders when listing who has bought product
+
 1.3.3 (2014-04-02)
     * Show more products on each page
     * Added booking errors to general log, debug to admins
