--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 1.3.4
     * Fixed, dont show cancelled orders when listing who has bought product
+    * Fixed bug when using coupons, they cannot be persisted
 
 1.3.3 (2014-04-02)
     * Show more products on each page
