--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 1.3.4
     * Fixed, dont show cancelled orders when listing who has bought product
     * Fixed bug when using coupons, they cannot be persisted
+    * Added option if teamlist is visible
 
 1.3.3 (2014-04-02)
     * Show more products on each page
