--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 1.3.4
     * Fixed, dont show cancelled orders when listing who has bought product
-    * Fixed bug when using coupons, they cannot be persisted
+    * Fixed, bug when using coupons, they cannot be persisted
+    * Fixed, dot send mails when creating guest account
+    * Fixed, create guest account
 
 1.3.3 (2014-04-02)
     * Show more products on each page
