--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
     * Fixed create guest account
     * Fixed when using coupons, they cannot be persisted
     * Added option if teamlist is visible
+    * Fixed we can search on never expiring users
 
 1.3.3 (2014-04-02)
     * Show more products on each page
