--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@
     * Added option if teamlist is visible
     * Add more than 2 to a booking
     * Fixed we can search on never expiring users
+    * Add that admin can see users future bookings
 
 1.3.3 (2014-04-02)
     * Show more products on each page
