--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,8 @@
     * Add more than 2 to a booking
     * Fixed we can search on never expiring users
     * Add that admin can see users future bookings
+    * Add color to booking plan
+    * Upgraded symfony to 2.5.0
 
 1.3.3 (2014-04-02)
     * Show more products on each page
