--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-1.3.4 (2014-06-30)
+1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
     * Fixed dont send mails when creating guest account
     * Fixed create guest account
@@ -12,6 +12,8 @@
     * Add color to booking plan
     * Upgraded symfony to 2.5.0
     * Added kiosk to project
+    * Upgraded keyboard on kiosk, and improved usability
+    * Found some bugs in kiosk, with connection timeouts
 
 1.3.3 (2014-04-02)
     * Show more products on each page
