--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+1.3.5
+    * Fixed, hide_show parameter also hides from dashboard
+
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
     * Fixed dont send mails when creating guest account
