--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 1.3.5
     * Fixed, hide_show parameter also hides from dashboard
+    * Added, product image
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
