--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 1.3.5
     * Fixed, hide_show parameter also hides from dashboard
     * Added, product image
+    * Added, public shared files
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
