--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
     * Fixed, hide_show parameter also hides from dashboard
     * Added, product image
     * Added, public shared files
+    * Added, documents to individual users
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
