--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
     * Added, product image
     * Added, public shared files
     * Added, documents to individual users
+    * Added, made product edit with tinymce description field
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
