--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@
     * Added, public shared files
     * Added, documents to individual users
     * Added, made product edit with tinymce description field
+    * Fixed, strip html tags in product table list
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
