--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@
     * Fixed, strip html tags in product table list
     * Fixed, upgraded to tinymce version 4.1
     * Updated, design on kiosk interface
+    * Added, if booking plan interupts with exsisting booking, you will be warned
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
