--- a/CHANGELOG
+++ b/CHANGELOG
@@ -8,6 +8,7 @@
     * Fixed, upgraded to tinymce version 4.1
     * Updated, design on kiosk interface
     * Added, if booking plan interupts with exsisting booking, you will be warned
+    * Fixed, a critical bug with some miss spelled class names, RedHat/CentOS would properly not run ClubMaster
 
 1.3.4 (2014-07-08)
     * Fixed dont show cancelled orders when listing who has bought product
