--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 1.3.6
     * Added, remember me functionality to login
     * Updated, bootstrap from version 2 to version 3
+    * Updated, only view open exchange requests
 
 1.3.5 (2014-07-31)
     * Fixed, hide_show parameter also hides from dashboard
