--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,7 @@
     * Added, remember me functionality to login
     * Updated, bootstrap from version 2 to version 3
     * Updated, only view open exchange requests
+    * Fixed, unattend a guest booking will not cancel the booking
 
 1.3.5 (2014-07-31)
     * Fixed, hide_show parameter also hides from dashboard
