--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@
     * Updated, bootstrap from version 2 to version 3
     * Updated, only view open exchange requests
     * Fixed, unattend a guest booking will not cancel the booking
+    * Updated, improved load and memory usage of booking plans
 
 1.3.5 (2014-07-31)
     * Fixed, hide_show parameter also hides from dashboard
