Added hide categories.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.3.6
+    * Added, autorenewal for quickpay subscription
+    * Added, feature to hide categories
+
 1.3.5 (2014-07-31)
     * Fixed, hide_show parameter also hides from dashboard
     * Added, product image
